# Autonomous-Ackermann-Vehicle

./: README.md
src/ackermann_gazebo/launch/: bot.launch.py  multifusion.launch.py  multirobot.launch.py
src/ackermann_gazebo/urdf/: RGBD_sensor.xacro  gz_ackermann_core.xacro  lidar_3d.xacro  lidar_sensor.xacro  sim.urdf.xacro
src/ackermann_gazebo/worlds/: empty.world
src/ackermann_gazebo/worlds/baylands/: simple_baylands.sdf
src/ackermann_gazebo/worlds/maze_world/: maze_world.sdf
src/ackermann_gazebo/worlds/track/: model.sdf
src/autonomous_driver/: CMakeLists.txt  package.xml
src/autonomous_driver/include/autonomous_driver/: kalman_1d.hpp  pid.hpp
src/autonomous_driver/src/: 2d_driver.cpp  autonomous_driver.cpp  fusion_driver.cpp  fusion_gap_driver.cpp  rgbd_driver.cpp
